src/website/static/css/screen-specific/xs.css
@media (max-width: 623px) {
    @layer main {
        :root {
            --file-card-max-height: 13rem;
            --thumbnail-hover-max-width: 7.5rem;
        }

        .header {
            align-items: center;
        }

        .header > .main-link {
            padding-top: 0;
        }

        .header > header-tab {
            display: none;
        }

        .header > header-nav-select {
            display: flex;
            align-items: center;
            flex: 1;
            margin: 0.25rem;
        }
    }
}

